Añadimos el promedio de la altura

--- a/my_first.ipynb
+++ b/my_first.ipynb
@@ -197,12 +197,94 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4a8f3e0d",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a obtener el promedio de las alturas que recabamos arriba. Para ello necesitamos recordar la fórmula del promedio.\n",
+    "\n",
+    "$P = (a_1 + a_2 + ... + a_{12})/12$\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "6741d812",
+   "execution_count": 12,
+   "id": "191eb01c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2089"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(altura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "69916427",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "174.08333333333334"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum(altura)/len(altura)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "21540dfd",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "P = sum(altura)/len(altura)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e37ebe8",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "56c1c22f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "174.08333333333334"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "P"
+   ]
   }
  ],
  "metadata": {
