Añadimos la tarea

--- a/my_first.ipynb
+++ b/my_first.ipynb
@@ -285,6 +285,31 @@
    "source": [
     "P"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "a23f98c4",
+   "metadata": {},
+   "source": [
+    "Podemos crear listas y la primera lista es la tarea:\n",
+    "\n",
+    "1.- Creen su cuenta de github.\n",
+    "2.- Crear un vínculo de github con su computadora. (Pidan una asesoría)\n",
+    "3.- Crear su primer repositorio y copiar este notebook. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c67e4644",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b38aa94d",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
